--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   flutter_native_splash: ^2.4.4
   flutter_local_notifications: ^18.0.1
   timezone: ^0.10.0
+  animated_splash_screen: ^1.3.0
+  lottie: ^3.3.1
 
 dev_dependencies:
   flutter_test:
@@ -89,6 +91,12 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
+    - assets/
+    - assets/logo/
+    - assets/fonts/
+    - assets/fonts/muli/
+    - assets/intro/
+    - assets/animes/
 
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
